--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -33,6 +33,11 @@
   <% end %>
 
   <div class="field form-group">
+    <strong>Upload a Profile Pic:</strong><br>
+    <%= f.file_field :avatar %>
+  </div>
+
+  <div class="field form-group">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
     <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
     <% if @minimum_password_length %>
