--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: 'btn btn-danger btn-xs' %>
     <%= yield %>
   </body>
 </html>
